--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/receive-data/receive-data.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/receive-data/receive-data.component.html
@@ -5,3 +5,4 @@
   <br />
   <button mat-button (click)="save(item)"> Save! </button>
 </div>
+<button mat-button (click)="addNew()"> Add New </button>
