--- a/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/cron-execution/cron-execution.component.html
+++ b/stankinsv2/solution/StankinsV2/StankinsDataWebAngular/src/app/cron-execution/cron-execution.component.html
@@ -4,5 +4,6 @@
   <textarea [(ngModel)]="item.content" style="width:90%;height:175px"  ></textarea>
   <br />
   <button mat-button (click)="save(item)"> Save! </button>
+  <button mat-button (click)="delete(item)"> Delete </button>
 </div>
 <button mat-button (click)="addNew()"> Add New </button>
