--- a/stankinsv2/solution/StankinsV2/Stankins.Razor/SenderYamlAzurePipelineMermaid.cshtml
+++ b/stankinsv2/solution/StankinsV2/Stankins.Razor/SenderYamlAzurePipelineMermaid.cshtml
@@ -92,55 +92,56 @@ public string Base64Encode(string plainText) {
 
 
     @{
-		var mermaidString="graph TD" +nl;
-		foreach (var jobIter in allJobs.Values){
-			var stepsJob=jobIter.Steps;
-			var nrSteps=stepsJob.Count();
+        var mermaidString="graph TD" +nl;
+        foreach (var jobIter in allJobs.Values){
+            var stepsJob=jobIter.Steps;
+            var nrSteps=stepsJob.Count();
 
-			if(nrSteps<1){
-				continue;
-			}
+            if(nrSteps<1){
+                continue;
+            }
             var nodeId=jobIter.NodeId();
             foreach(var jDep in jobIter.JobDepends){
                 mermaidString += (string.Format("end{0}-->start{1}{2}", jDep.NodeId(),nodeId,nl));
             }
-            
+
         }
         var subgraphs =new Dictionary<Job,string> ();
-         //definition of graphs
+        //definition of graphs
         foreach (var jobIter in allJobs.Values)
         {
-			var stepsJob=jobIter.Steps;
-			var nrSteps=stepsJob.Count();
+            var stepsJob=jobIter.Steps;
+            var nrSteps=stepsJob.Count();
 
-			if(nrSteps<1){
-				continue;
-			}
-			string subGraph ="";
+            if(nrSteps<1){
+                continue;
+            }
+            string subGraph ="";
             subGraph += nl + "subgraph "+ jobIter.jobName ;
-			subGraph += nl + $"start{jobIter.NodeId()}[{q}Start {jobIter.jobName}{q}]--> {stepsJob[0].NodeId()}";
-			
-			
-			for(var sIter=0;sIter<nrSteps-1;sIter++){
-				
-				
-				subGraph += nl +$"{stepsJob[sIter].NodeId()}[{q}{stepsJob[sIter].displayName}{q}] --> {stepsJob[sIter+1].NodeId()}";
-				subGraph  = subGraph.Replace("@","&#xA9;");
-			}
-			subGraph += nl + $"{stepsJob[nrSteps-1].NodeId()}[{q}{stepsJob[nrSteps-1].displayName}{q}] --> end{jobIter.NodeId()}[{q}End {jobIter.jobName}{q}]";
-			subGraph += nl + "end";
-			mermaidString +=subGraph;
-			subgraphs.Add(jobIter,subGraph);
+            subGraph += nl + $"start{jobIter.NodeId()}[{q}Start {jobIter.jobName}{q}]--> {stepsJob[0].NodeId()}";
+
+
+            for(var sIter=0;sIter<nrSteps-1;sIter++){
+
+
+                subGraph += nl +$"{stepsJob[sIter].NodeId()}[{q}{stepsJob[sIter].displayName}{q}] --> {stepsJob[sIter+1].NodeId()}";
+                subGraph  = subGraph.Replace("@","&#xA9;");
+            }
+            subGraph += nl + $"{stepsJob[nrSteps-1].NodeId()}[{q}{stepsJob[nrSteps-1].displayName}{q}] --> end{jobIter.NodeId()}[{q}End {jobIter.jobName}{q}]";
+            subGraph += nl + "end";
+            mermaidString +=subGraph;
+            subgraphs.Add(jobIter,subGraph);
         }
-		foreach(var item in subgraphs)
-		{
-			
-			mermaidString += $"{nl}click start{item.Key.NodeId()} {q}https://mermaidjs.github.io/mermaid-live-editor/#/edit/" + Base64Encode("graph TD" +nl + item.Value) + q;
-			
-	
-			
-		}
-		 
+        foreach(var item in subgraphs)
+        {
+
+            mermaidString += $"{nl}click start{item.Key.NodeId()} {q}https://mermaidjs.github.io/mermaid-live-editor/#/edit/" + Base64Encode("graph TD" +nl + item.Value) + q;
+            mermaidString += $"{nl}";
+            mermaidString += $"{nl}";
+
+
+        }
+
 
     }
 
