--- a/stankinsv2/solution/GenerateAll/FrontEnd/Angular10.0/src/app/navbar/navbar.component.html
+++ b/stankinsv2/solution/GenerateAll/FrontEnd/Angular10.0/src/app/navbar/navbar.component.html
@@ -1,3 +1,21 @@
+@model Stankins.Interfaces.IDataToSent
+@{
+
+var ds= Model.FindAfterName("DataSource").Value;
+    
+    var nrRowsDS=ds.Rows.Count;
+    
+    var nameTablesToRender = new string[nrRowsDS];
+    var tables=new System.Data.DataTable[nrRowsDS];
+    for (int iRowDS = 0; iRowDS < nrRowsDS; iRowDS++)
+    {
+        var nameTable = ds.Rows[iRowDS]["TableName"].ToString();
+        var renderTable = Model.FindAfterName(nameTable).Value;
+        nameTablesToRender[iRowDS] = nameTable;
+        tables[iRowDS]=renderTable;
+    }
+}
+
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav
     #drawer
@@ -9,9 +27,13 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
+      @foreach(var nameTable in nameTablesToRender){
+
       <a mat-list-item href="#">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      }
+      
+      <a mat-list-item routerLink="/about" routerLinkActive="active">About</a>
+      
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
